<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking Locator</string>
    <string name="register_link">or <b>Register Here</b></string>
    <string name="tag_line">Your One Stop Parking Solution</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="forgot_password_info">Fill in your email address to reset your password.</string>
    <string name="forgot_password_result">An email with your new password will be sent to you shortly</string>
    <string name="change_password_info">Fill in the following fields to change your password.</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_info">Please fill in the required information</string>
    <string name="register_info2">And we will do the rest for you</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_password">Change Password</string>

    <string name="search_hint">Nearby landmarks</string>

    <string name="info_window_instruction">Click for more details</string>

    <!-- Titles -->
    <string name="title_Login">Login Page</string>
    <string name="title_Home">Home Page</string>
    <string name="title_Register">Register Page</string>
    <string name="title_ForgotPassword">Forgot Password</string>
    <string name="settings">Settings</string>
    <string name="settings_main">Settings</string>
    <string name="qr_scanner">QR scanner</string>
    <string name="feedback">Feedback</string>

    <string name="feedback_info">Please tell us what\'s wrong. \nWe will fix them in no time!</string>
    <string name="send">Send</string>

    <!--Facebook-->
    <string name="facebook_app_id">745816718838207</string>

    <!-- Lot Details -->
    <string name="lot_price">Price</string>
    <string name="operation_hour">Operation Hour</string>
    <string name="capacity">Capacity</string>
    <string name="availability">Availability</string>
    <string name="nearby">Nearby locations</string>
    <string name="navigate_here">Navigate!</string>

    <string name="park_here">Park here?</string>
    <string name="request_edit">Wrong information? \nClick here to tell us!</string>

    <!--Vehicle-->
    <string name="total_parked_time">Total time parked</string>
    <string name="parked_in_text">Your vehicle is parked in: </string>
    <string name="remove_and_navigate">Un-park\n     and Navigate</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="floor">Floor</string>
    <string name="position">Position</string>
    <string name="qr">Scan QR code beside your slot to save your current location</string>

    <!--Settings-->
    <string name="developed_by">Developed by: Chong Jin Heng\nDesigned by: Chong Jin Heng\n\nSupervised by: Mr Tong Hau Lee\nModerated by: Mr Tong Gee Kok</string>
    <string name="developed_for">Developed for Multimedia University \nFinal Year Project \'2015</string>
    <string-array name="setting_array">
        <item>Change display name</item>
        <item>Change password</item>
        <item>About</item>
        <item> </item>
    </string-array>

    <!--Register errors-->
    <string name="email_format_error">Please enter a valid email address.</string>
    <string name="password_length_error">Password should be 8 to 15 characters.</string>
    <string name="password_format_error">Password format is invalid.</string>
    <string name="password_repeat_error">Password does not match.</string>

</resources>
