<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/cpassword_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/change_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="36sp"
            android:text="@string/change_password"
            android:fontFamily="sans-serif-thin"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/change_password_img"
            android:contentDescription="@string/app_name"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/change_password_title"
            android:src="@drawable/ic_forgot_password"/>

        <TextView
            android:id="@+id/change_password_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_img"
            android:text="@string/change_password_info"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/current_pass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_box"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:padding="7dp"
            android:layout_below="@id/change_password_info"
            android:hint="Current Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint"
            android:textColor="@color/text_black"
            android:paddingTop="2dp"/>

        <EditText
            android:id="@+id/change_pass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_box"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:padding="7dp"
            android:layout_below="@id/current_pass_edit_text"
            android:hint="New Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint"
            android:textColor="@color/text_black"
            android:paddingTop="2dp"/>

        <EditText
            android:id="@+id/change_pass_repeat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_box"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:padding="7dp"
            android:layout_below="@id/change_pass_edit_text"
            android:hint="Repeat New Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint"
            android:textColor="@color/text_black"
            android:paddingTop="2dp"/>

        <TextView
            android:id="@+id/change_pass_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/change_pass_repeat_edit_text"
            android:text="@string/password_length_error"
            android:textColor="@color/text_white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/change_pass_validator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_pass_reminder"
            android:text="@string/password_format_error"
            android:textColor="@color/red_error"
            android:visibility="invisible"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/change_pass_not_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_pass_reminder"
            android:text="@string/password_repeat_error"
            android:textColor="@color/red_error"
            android:visibility="invisible"
            android:textSize="14sp"/>

        <com.dd.processbutton.iml.ActionProcessButton
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/change_pass_not_match"
            android:layout_centerInParent="true"
            android:text="@string/reset_password"
            android:textSize="16sp"
            android:textColor="@color/text_white"
            android:onClick="changePasswordButtonClicked"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/primary_medium_light"
            custom:pb_colorPressed="@color/primary_dark"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Loading"
            custom:pb_textError="Error"
            custom:pb_colorError="@color/red_error"
            android:id="@+id/button_change_pass"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/change_pass_not_match"
            android:layout_centerInParent="true"
            android:text="@string/register_now"
            android:textSize="16sp"
            android:textColor="@color/text_white"
            android:background="@drawable/bg_button_translucent"
            android:alpha="0.0"
            android:id="@+id/button_cpassword_disabled"/>


    </RelativeLayout>

</LinearLayout>