<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/setting_splashImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="56dp"
        android:paddingEnd="56dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/setting_splashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/setting_splashImage"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-thin"/>

    <TextView
        android:id="@+id/setting_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_splashTitle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textColor="@color/text_white"
        android:fontFamily="sans-serif-thin"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:text="@string/developed_by"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/setting_about_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_about"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:paddingTop="30dp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:text="@string/developed_for"
        android:textSize="15sp"/>

</RelativeLayout>