<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary">

    <ImageButton
        android:id="@+id/dropdown_arrow_fpassword"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_drop_down"/>

    <RelativeLayout
        android:id="@+id/fpassword_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:text="@string/forgot_password"
            android:fontFamily="sans-serif-thin"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/forgot_password_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/forgot_password_title"
            android:src="@drawable/ic_forgot_password"/>

        <TextView
            android:id="@+id/forgot_password_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_img"
            android:text="@string/forgot_password_info"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/forgot_pass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_box"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:padding="7dp"
            android:layout_below="@id/forgot_password_info"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint"
            android:textColor="@color/text_black"
            android:paddingTop="2dp"/>

        <com.dd.processbutton.iml.ActionProcessButton
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:layout_below="@id/forgot_pass_edit_text"
            android:layout_centerInParent="true"
            android:text="@string/reset_password"
            android:textSize="16sp"
            android:textColor="@color/text_white"
            android:onClick="forgotPasswordButtonClicked"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/primary_medium_light"
            custom:pb_colorPressed="@color/primary_dark"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Loading"
            custom:pb_textError="Error"
            custom:pb_colorError="@color/red_error"
            android:id="@+id/button_reset_pass"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:layout_below="@id/forgot_pass_edit_text"
            android:layout_centerInParent="true"
            android:text="@string/register_now"
            android:textSize="16sp"
            android:textColor="@color/text_white"
            android:background="@drawable/bg_button_translucent"
            android:alpha="0.0"
            android:id="@+id/button_fpassword_disabled"/>


    </RelativeLayout>

</LinearLayout>