<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="60dp">

        <ImageView
            android:id="@+id/login_splashImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:id="@+id/login_splashTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_splashImage"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textSize="38sp"
            android:width="50dp"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-thin"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/login_tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_splashTitle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="3dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@android:color/white"
            android:text="@string/tag_line"
            android:textSize="22dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login_tag_line"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_box"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="30dp"
                android:padding="7dp"
                android:editable="true"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hint"
                android:textColor="@color/text_black"
                android:paddingTop="2dp"/>

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_box"
                android:layout_below="@id/username_login"
                android:layout_marginBottom="15dp"
                android:padding="7dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColorHint="@color/hint"
                android:textColor="@color/text_black"
                android:paddingTop="2dp"/>

            <com.facebook.widget.LoginButton
                android:id="@+id/facebookLoginButton"
                android:layout_below="@id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/facebookLoginButton"
                android:text="@string/forgot_password_link"
                android:textColor="@drawable/selector_text"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:onClick="forgotPasswordClicked"/>

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/facebookLoginButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="6dp"
                android:textColor="@drawable/selector_text"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/register_link"
                android:onClick="registerTextClicked"/>

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/signup_text"
                android:background="@drawable/selector_button_accent"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_arrow_forward"
                fab:fab_colorNormal="@color/accent"
                fab:fab_colorPressed="@color/accent_light"
                fab:fab_colorRipple="@color/accent"
                android:onClick="loginButtonClicked"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>